welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:21: error: identifier expected but 'false' found.
}while(getCouleurSol():Orange==false);
                               ^Poucet:24: error: ')' expected but '}' found.
	}
        ^